grammar.js
    source_file: ($) => repeat($._statement),

    _statement: ($) =>
      choice($._simple_statements, $._compound_statement),

    // Simple statements end with a newline (or semicolon-separated).
    pass_statement:     (_) => prec.left("pass"),
    break_statement:    (_) => prec.left("break"),
    return_statement: ($) =>
      seq("return", optional(commaSep1($.expression))),

    assert_statement: ($) =>
      seq("assert", commaSep1($.expression)),

    expression_statement: ($) =>
      choice($.expression, $.tuple_expression),

    assignment: ($) =>
      seq(
        field("left", $._left_hand_side),
        "=",
        field("right", $.expression),
      ),

    augmented_assignment: ($) =>
      seq(
        field("left", $._left_hand_side),
        field("operator", choice("+=", "-=", "*=", "/=", "//=", "%=", "|=")),
        field("right", $.expression),
      ),

    _left_hand_side: ($) =>
      choice($.pattern, $.pattern_list),

    pattern: ($) =>
      choice(
        $.identifier,
        $.subscript,
        $.attribute,
      ),

    // =========================================================================
    // Compound statements
    // =========================================================================

    function_definition: ($) =>
      seq(
        "def",
        field("name", $.identifier),
        field("parameters", $.parameters),
        optional(seq("->", field("return_type", $.type_annotation))),
        ":",
        field("body", $._suite),
      ),

    parameters: ($) =>
      seq(
        "(",
        optional(seq(commaSep1($.parameter), optional(","))),
        ")",
      ),

    parameter: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", field("type", $.type_annotation))),
        repeat(seq("&", field("alias", $.identifier))),
        optional(seq("=", field("default", $.expression))),
      ),

    // Type annotation: one or more type names separated by |
    // e.g.  str | list | dict
    type_annotation: ($) =>
      sep1($.type_name, "|"),

    type_name: ($) =>
      choice(
        "str", "int", "bool", "list", "dict", "function", "config",
        $.identifier,
      ),

    // =========================================================================
    // Control flow
    // =========================================================================

    for_statement: ($) =>
      seq(
        "for",
        field("left", $._left_hand_side),
        "in",
        field("right", $.expression),
        ":",
        field("body", $._suite),
        optional(field("alternative", $.else_clause)),
      ),

    if_statement: ($) =>
      seq(
        "if",
        field("condition", $.expression),
        ":",
        field("consequence", $._suite),
        repeat(field("alternative", $.elif_clause)),
        optional(field("alternative", $.else_clause)),
      ),

    elif_clause: ($) =>
      seq(
        "elif",
        field("condition", $.expression),
        ":",
        field("consequence", $._suite),
      ),

    else_clause: ($) =>
      seq("else", ":", field("body", $._suite)),

    // Block — the external scanner emits INDENT at start, DEDENT at end.
    _suite: ($) =>
      choice(
        alias($._simple_statements, $.block),
        seq($._indent, $.block),
        alias($._newline, $.block),
      ),

    block: ($) => seq(repeat($._statement), $._dedent),

    // =========================================================================
    // Expressions
    // =========================================================================

    expression: ($) =>
      choice(
        $.comparison_operator,
        $.not_operator,
        $.boolean_operator,
        $.lambda,
        $.primary_expression,
        $.conditional_expression,
      ),

    conditional_expression: ($) =>
      prec.right(
        PREC.conditional,
        seq($.expression, "if", $.expression, "else", $.expression),
      ),

    lambda: ($) =>
      prec(
        PREC.lambda,
        seq(
          "lambda",
          optional(field("parameters", $.lambda_parameters)),
          ":",
          field("body", $.expression),
        ),
      ),

    lambda_parameters: ($) => commaSep1($.lambda_parameter),

    lambda_parameter: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq("=", field("default", $.expression))),
      ),

    comparison_operator: ($) =>
      prec.left(
        PREC.compare,
        seq(
          $.primary_expression,
          repeat1(
            seq(
              field("operators", choice(
                "<", "<=", "==", "!=", ">=", ">",
                "in",
                seq("not", "in"),
                "is",
                seq("is", "not"),
              )),
              $.primary_expression,
            ),
          ),
        ),
      ),

    // =========================================================================
    // Primary expressions
    // =========================================================================

    primary_expression: ($) =>
      choice(
        $.binary_operator,
        $.identifier,
        $.string,
        $.concatenated_string,
        $.integer,
        $.true,
        $.false,
        $.none,
        $.unary_operator,
        $.attribute,
        $.subscript,
        $.call,
        $.list,
        $.list_comprehension,
        $.dict,
        $.dict_comprehension,
        $.tuple,
        $.parenthesized_expression,
        $.build_label,
      ),

    attribute: ($) =>
      prec(
        PREC.call,
        seq(
          field("object", $.primary_expression),
          ".",
          field("attribute", $.identifier),
        ),
      ),

    subscript: ($) =>
      prec(
        PREC.call,
        seq(
          field("value", $.primary_expression),
          "[",
          commaSep1(field("subscript", choice($.expression, $.slice))),
          optional(","),
          "]",
        ),
      ),

    call: ($) =>
      prec(
        PREC.call,
        seq(
          field("function", $.primary_expression),
          field("arguments", $.argument_list),
        ),
      ),

    argument_list: ($) =>
      seq(
        "(",
        optional(seq(commaSep1($.argument), optional(","))),
        ")",
      ),

    argument: ($) =>
      choice(
        seq(
          field("name", $.identifier),
          "=",
          field("value", $.expression),
        ),
        field("value", $.expression),
      ),

    // =========================================================================
    // Literals
    // =========================================================================

    true:  (_) => "True",
    false: (_) => "False",
    none:  (_) => "None",

    integer: (_) =>
      token(
        choice(
          seq(choice("0x", "0X"), /[0-9a-fA-F]+/),
          seq(choice("0o", "0O"), /[0-7]+/),
          seq(choice("0b", "0B"), /[01]+/),
          /[0-9]+/,
        ),
      ),

    // =========================================================================
    // Collections
    // =========================================================================

    list: ($) =>
      seq("[", optional(seq(commaSep1($.expression), optional(","))), "]"),

    dict: ($) =>
      seq("{", optional(seq(commaSep1($.dict_pair), optional(","))), "}"),

    dict_pair: ($) =>
      seq(field("key", $.expression), ":", field("value", $.expression)),

    list_comprehension: ($) =>
      seq(
        "[",
        field("body", $.expression),
        $._comprehension_clauses,
        "]",
      ),

    _comprehension_clauses: ($) =>
      seq($.for_in_clause, repeat(choice($.for_in_clause, $.if_clause))),

    for_in_clause: ($) =>
      prec.left(
        seq(
          "for",
          field("left", $._left_hand_side),
          "in",
          field("right", commaSep1($.expression)),
        ),
      ),

    string: ($) =>
      seq(
        $.string_start,
        repeat(choice($.interpolation, $.string_content)),
        $.string_end,
      ),

    string_content: ($) =>
      prec.right(repeat1(choice($.escape_sequence, $._string_content))),

    interpolation: ($) =>
      seq("{", field("expression", $.identifier), "}"),

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    comment: (_) => token(seq("#", /.*/)),
